--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,16 @@
         <url-pattern>/StartRedirect1</url-pattern>
     </servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>FinishRedirect</servlet-name>
+        <servlet-class>com.example.FinishRedirect</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FinishRedirect</servlet-name>
+        <url-pattern>/FinishRedirect1</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>Servlet2</servlet-name>
         <servlet-class>com.example.Servlet2</servlet-class>
